--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -3,8 +3,8 @@
 # --------------------------------------
 
 menu:
-  # Home: / || fas fa-home
-  # Archives: /archives/ || fas fa-archive
+  Home: / || fas fa-home
+  Archives: /archives/ || fas fa-archive
   # Tags: /tags/ || fas fa-tags
   # Categories: /categories/ || fas fa-folder-open
   # List||fas fa-list:
